# tax-prep-agent

./: .gitignore  README.md  install.sh  pyproject.toml
data/tax_rules/: federal_2024.yaml
data/tax_rules/states/: ca_2024.yaml
docs/: API.md  ARCHITECTURE.md  GOOGLE_DRIVE_SETUP.md  README.md  USAGE.md  agent-sdk-plan.md  web-vs-cli-plan.md
src/tax_agent/: __init__.py  agent.py  agent_compat.py  agent_sdk.py  chat.py  cli.py  config.py  context.py  env.py  exporters.py  hooks.py  memory.py  profile.py  registry.py  reports.py  session.py  slash_commands.py  subagents.py  updater.py  utils.py  verification.py
src/tax_agent/analyzers/: __init__.py  deductions.py  implications.py
src/tax_agent/collectors/: __init__.py  document_classifier.py  google_drive.py  ocr.py  pdf_parser.py
src/tax_agent/models/: __init__.py  documents.py  memory.py  mode.py  returns.py  taxpayer.py
src/tax_agent/research/: __init__.py  tax_researcher.py  web_search.py
src/tax_agent/reviewers/: __init__.py  error_checker.py
src/tax_agent/storage/: __init__.py  database.py  encryption.py
src/tax_agent/tools/: __init__.py  tax_calculations.py
tests/: conftest.py  test_analyzers.py  test_encryption.py  test_google_drive.py  test_hooks.py  test_models.py  test_registry.py  test_reports.py  test_tax_calculations.py  test_updater.py  test_utils.py  test_verification.py  test_web_search.py
